add alt to image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="card supervisor">
                     <h1>Supervisor</h1>
                     <p>Monitors activity to identify project roadblocks</p>
-                    <img src="./images/icon-supervisor.svg" />
+                    <img src="./images/icon-supervisor.svg" alt="supervisor icon"/>
                 </div>
                 <div class="card builder">
                     <h1>Team Builder</h1>
